[package]
name = "pipes"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = "1.17.0"
wasi = "0.14.2"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "bos:pipes"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:clocks" = "0.2.6"
